tests/baselines/reference/recursiveTypes1.errors.txt
tests/cases/compiler/recursiveTypes1.ts(1,18): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/compiler/recursiveTypes1.ts(1,28): error TS2464: Illegal reference Entity in constraint.
tests/cases/compiler/recursiveTypes1.ts(6,18): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/compiler/recursiveTypes1.ts(6,28): error TS2464: Illegal reference Person in constraint.


==== tests/cases/compiler/recursiveTypes1.ts (4 errors) ====
    interface Entity<T extends Entity<T>> {
                     ~~~~~~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                               ~~~~~~~~~
!!! error TS2464: Illegal reference Entity in constraint.
       X: T;
       Y: T;
    }
    
    interface Person<U extends Person<U>> extends Entity<U> {
                     ~~~~~~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                               ~~~~~~~~~
!!! error TS2464: Illegal reference Person in constraint.
    	n: number;
    }
    
    interface Customer extends Person<Customer> {
    	s: string;
    }
    